--- a/frontend/src/Styles/App.css
+++ b/frontend/src/Styles/App.css
@@ -1,3 +1,4 @@
+/* App.css */
 .app-container {
     display: flex;
 }
@@ -14,13 +15,13 @@
 
 .content-container {
     flex-grow: 1;
-    margin-left: 100px; /* Adjusted to match the sidebar width */
-    padding: 20px; /* Add padding for better spacing */
-    box-sizing: border-box; /* Ensure padding is included in the width */
+    display: flex;
+    align-items: center; /* Center vertically */
+    justify-content: center; /* Center horizontally */
+    padding: 20px;
+    box-sizing: border-box;
 }
 
 .centered-content {
     text-align: center;
-    margin-top: 50vh; /* Center the content vertically */
-    transform: translateY(-50%);
 }
