--- a/frontend/src/Styles/App.css
+++ b/frontend/src/Styles/App.css
@@ -1,6 +1,12 @@
 /* App.css */
+
+html,
+body {
+    margin: 0;
+}
+
 .app-container {
-    display: flex;
+
 }
 
 .sidebar {
@@ -8,9 +14,16 @@
     left: 0;
     top: 0;
     height: 100%;
-    width: 100px; /* Set the width to 100px */
+    width: 100px;
     background-color: #333;
     color: #fff;
+}
+
+.grid_template1{
+    display: grid;
+    grid-template-columns: 6fr 4fr;
+    grid-template-rows: 2fr;
+    padding: 10px;
 }
 
 .content-container {
