Changed background color, scrollbars, font family, color and inital welcome page design

--- a/frontend/src/Styles/App.css
+++ b/frontend/src/Styles/App.css
@@ -3,7 +3,43 @@
 html,
 body {
     margin: 0;
+    padding: 0;
+    background-color:#1F2833;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: #fff;
+    text-align: center;
+
+
+
 }
+
+
+form {
+    display: flex;
+    flex-direction: column;
+    max-width: 300px;
+    margin: auto;
+    text-align: left;
+}
+
+input {
+    padding: 8px;
+    margin-bottom: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    width: 100%;
+}
+
+button {
+    padding: 10px;
+    background-color: #a90000;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
 
 .app-container {
 
