--- a/frontend/src/Styles/Card.css
+++ b/frontend/src/Styles/Card.css
@@ -9,6 +9,16 @@
     display: flex;
     justify-content: center;
 
+
+}
+
+*::-webkit-scrollbar-thumb{
+    background-color: hsl(0, 0%, 80%);
+    border-radius: 10px;
+}
+
+*::-webkit-scrollbar{
+    width: 10px;
 }
 
 .card .card-title{
