--- a/frontend/src/Styles/Home.css
+++ b/frontend/src/Styles/Home.css
@@ -4,6 +4,9 @@
     gap: 16px;
     padding: 16px;
     padding-left: 5em;
+    /*height: 100vh;*/
+    /*width: 100%;*/
+    background-color: #373a47;
 
 
 }
