--- a/frontend/src/Styles/ImageCard.css
+++ b/frontend/src/Styles/ImageCard.css
@@ -1,16 +1,28 @@
-.card{
-    border: 1px solid hsl(0, 0%, 80%);
+.imageCard{
+
     border-radius: 10px;
-    box-shadow: 5px 5px 5px hsla(0, 0%, 0%, 0.1);
+
     padding: 20px;
     margin: 10px;
     text-align: center;
     max-width: 400px;
     display: flex;
     justify-content: center;
-    background-color: #21252d;
 
 
+
+}
+
+.profilePic{
+    border-radius: 50%;
+    border-radius: 50%;
+    width: 7em;
+    height: 7em;
+    object-fit: cover;
+    margin: 0 auto;
+    margin-bottom: 10px;
+    border: 2px solid #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 *::-webkit-scrollbar-thumb{
@@ -22,7 +34,7 @@
     width: 10px;
 }
 
-.card .card-title{
+.imageCard .card-title{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     padding-bottom: 18px;
@@ -30,7 +42,7 @@
 
 }
 
-.card .tag{
+.imageCard .tag{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
 
@@ -43,19 +55,19 @@
     white-space: nowrap;
 }
 
-.card .card-text{
-    text-align: left;
+.imageCard .card-text{
+    text-align: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
     margin:12px 0px;
     overflow: auto;
-    font-size: 0.85em;
+    font-size: 0.75em;
     max-height: 100px;
 }
 
 
 
-.card .dividerC{
+.imageCard .dividerC{
     margin: 10px 30px 0px 0px;
 }
 
