--- a/frontend/src/Styles/CourseCard.css
+++ b/frontend/src/Styles/CourseCard.css
@@ -1,4 +1,4 @@
-.card{
+.courseCard{
     border: 1px solid hsl(0, 0%, 80%);
     border-radius: 10px;
     box-shadow: 5px 5px 5px hsla(0, 0%, 0%, 0.1);
@@ -6,7 +6,7 @@
     margin: 10px;
     text-align: center;
     max-width: 400px;
-    display: flex;
+
     justify-content: center;
     background-color: #21252d;
 
@@ -22,32 +22,33 @@
     width: 10px;
 }
 
-.card .card-title{
+.courseCard .card-title{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
-    padding-bottom: 1.75em;
+    padding-bottom: 1em;
     overflow: auto;
 
 }
 
-.card .tag{
+.courseCard .tag{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
-
     font-size: 0.8em;
     font-style: italic;
     overflow-y: hidden;
     max-height: 60px;
     overflow-x:auto;
-    max-width: 200px;
+    max-width: 28em;
     white-space: nowrap;
+    bottom: 0;
+
 }
 
-.card .card-text{
+.courseCard .card-text{
     text-align: left;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
-    margin:12px 0px;
+    margin-bottom: 3em;
     overflow: auto;
     font-size: 0.85em;
     max-height: 100px;
@@ -55,7 +56,7 @@
 
 
 
-.card .dividerC{
+.courseCard .dividerC{
     margin: 10px 30px 0px 0px;
 }
 
