--- a/frontend/src/Styles/Courses.css
+++ b/frontend/src/Styles/Courses.css
@@ -13,7 +13,7 @@
     flex-direction: column;
     justify-content: space-between;
     margin: 0px 0px 0px 0px;
-    padding: 0px 30px 0px 0px;
+    padding: 0px 3em 0px 0px;
 }
 
 .RightContainer {
