--- a/frontend/src/Styles/SubmitCard.css
+++ b/frontend/src/Styles/SubmitCard.css
@@ -1,4 +1,4 @@
-.card{
+.submitCard{
     border: 1px solid hsl(0, 0%, 80%);
     border-radius: 10px;
     box-shadow: 5px 5px 5px hsla(0, 0%, 0%, 0.1);
@@ -6,11 +6,9 @@
     margin: 10px;
     text-align: center;
     max-width: 400px;
-    display: flex;
     justify-content: center;
     background-color: #21252d;
-
-
+    display: block;
 }
 
 *::-webkit-scrollbar-thumb{
@@ -22,40 +20,30 @@
     width: 10px;
 }
 
-.card .card-title{
+.submitCard .card-title{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
-    padding-bottom: 1.75em;
+    padding-bottom: 1em;
     overflow: auto;
 
 }
 
-.card .tag{
+
+
+.submitCard .card-text{
+    text-align: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin: 0;
-
-    font-size: 0.8em;
-    font-style: italic;
-    overflow-y: hidden;
-    max-height: 60px;
-    overflow-x:auto;
-    max-width: 200px;
-    white-space: nowrap;
-}
-
-.card .card-text{
-    text-align: left;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
-    margin:12px 0px;
+    width: 25.8%;
+    margin:3.48em auto;
     overflow: auto;
     font-size: 0.85em;
     max-height: 100px;
+    align-items: center;
 }
 
 
 
-.card .dividerC{
+.submitCard .dividerC{
     margin: 10px 30px 0px 0px;
 }
 
@@ -67,5 +55,11 @@
 
 h2 {
     font-size: 1.25em;
+}
+
+.cardButton{
+    width: 40%;
+    margin: 0px auto;
+    display: block;
 }
 
