Added register form, added inital query param setup for course

--- a/frontend/src/Styles/AuthenticationForm.css
+++ b/frontend/src/Styles/AuthenticationForm.css
@@ -13,3 +13,11 @@
     margin: 1em auto;
     width: 60%;
 }
+
+.signInText{
+    margin: 0.5em auto;
+}
+
+.signText{
+    text-decoration: underline;
+}
