--- a/frontend/src/Styles/Home.css
+++ b/frontend/src/Styles/Home.css
@@ -1,47 +1,51 @@
 .Home {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr; /* Two rows, first row adjusts to content height */
     gap: 16px;
     padding: 16px;
     padding-left: 5em;
 }
 
-.MainContainer {
-    display: flex;
-}
-
-
-
 .CityChallenge {
     display: inline-block;
     height: auto;
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
+
+}
+
+
+.ButtonContainer {
+    display: flex;
+    justify-content: space-between;
+    margin: 0px 0px 0px 0px;
+    padding: 0px 0px 0px 0px;
+}
+
+.Button {
+    background-color: #3498db;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
 }
 
 .LeftContainer {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin-right: 16px; /* Adjust margin as needed */
-    width: 50%;
-}
-
-.InfiniteScrollContainer {
-    height: 250px;
-    overflow-y: scroll;
-    padding-left: 40px;
-    margin-top: 16px; /* Adjust margin as needed */
+    margin: 0px 0px 0px 0px;
+    padding: 0px 30px 0px 0px;
 }
 
 .RightContainer {
     display: flex;
     flex-direction: column;
-    width: 50%;
+    justify-content: space-between;
 }
 
-.RecommendedCourses {
-    width: 100%;
-}
+.CoursesStartedH1 {
+    margin: 0px 0px 0px 0px;
 
-/* Add any other styles you need for the Card component or other elements */
+}
