--- a/frontend/src/Styles/Card.css
+++ b/frontend/src/Styles/Card.css
@@ -5,7 +5,7 @@
     padding: 20px;
     margin: 10px;
     text-align: center;
-    max-width: 400px;
+
     display: flex;
     justify-content: center;
     background-color: #21252d;
@@ -56,7 +56,8 @@
 
 
 .card .dividerC{
-    margin: 10px 30px 0px 0px;
+    margin: 10px 80px 0px 0px;
+    padding-right: 2em;
 }
 
 .no-tresspasing{
